--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,5 @@ authors = [
 license = "MIT/Apache-2.0"
 
 [dependencies]
-rustc-serialize = "*"
-byteorder = "*"
+rustc-serialize = "0.3"
+byteorder = "0.3.3"
